# leo-1c

./: LICENSE  pyproject.toml  readme.md
examples/: example.py
src/leo_1c/: __init__.py  client.py  connection.py  exception.py  odata_resource.py
src/leo_1c/client_module/: bill.py  bill_pdf.py  odata.py  partner.py
src/leo_1c/client_modules/: __init__.py  bill_pdfs.py  bills.py  odata.py  partners.py
src/leo_1c/entities/: __init__.py  bill.py  entity.py  partner.py
src/leo_1c/entity/: bill.py  partner.py
