[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leo-1c"
version = "0.0.1"
authors = [
    { name = "Mikhail Kormanovskii", email = "i@kormanowsky.ru" },
]
description = "A Small Client for 1C for Leo."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests==2.31.0",
    "typing_extensions==4.11.0"
]

[project.urls]
Homepage = "https://github.com/kormanowsky/leo-1c"
Issues = "https://github.com/kormanowsky/leo-1c/issues"